# d3d9-to-11

./: .appveyor.yml  .travis.yml  Cargo.toml
.cargo/: config
.github/workflows/: rust.yml
docs/: building.md  tests.md
src/: lib.rs
src/core/: adapter.rs  context.rs
src/d3d11/: buffer.rs  devctx.rs  texture.rs
src/dev/: device.rs
src/dev/texture/: cube.rs  texture2d.rs
tests/: Cargo.toml
tests/src/: device.rs  main.rs
