[package]
name = "d3d9-to-11"
version = "0.1.0"
authors = ["Gabriel Majeri <gabriel.majeri6@gmail.com>"]
license = "LGPL3+"
edition = "2018"

[lib]
name = "d3d9"
crate-type = ["cdylib"]

[features]
inline_asm = []
default = ["env_logger"]

[dependencies]
winit = "0.30.5"
heck = "0.5.0"
windows = "0.58"
log = "0.4"
env_logger = { version = "0.11.5", optional = true }
win_dbg_logger = { version = "0.1.0", optional = true }
comptr = { git = "https://github.com/GabrielMajeri/comptr-rs" }
com-impl = { git = "https://github.com/ExPixel/com-impl-rs" }
bitflags = "2.6.0"
nalgebra = "0.33.0"
widestring = "1.1.0"
typenum = { git = "https://github.com/Fraxinus001/typenum2018" }

[dependencies.winapi]
version = "0.3.9"
features = ["winerror",
    "d3d9",
    "d3d9types",
    "ntdef",
    "dxgi",
    "d3d11",
    "winuser",
    "dxgiformat",
    "minwindef",
    "edition"]

[workspace]
# members = ["tests"]

[profile.release]
lto = true
