cargo-features = ["edition"]

[package]
name = "d3d9-to-11"
version = "0.1.0"
authors = ["Gabriel Majeri <gabriel.majeri6@gmail.com>"]
license = "LGPL3+"
edition = "2018"

[lib]
name = "d3d9"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.22"
env_logger = "0.11.5"
comptr = { git = "https://github.com/GabrielMajeri/comptr-rs" }
com-impl = { git = "https://github.com/GabrielMajeri/com-impl-rs" }
bitflags = "2.6.0"
nalgebra = "0.33.0"

[dependencies.winapi]
version = "0.3.9"
features = ["winerror", "d3d9", "dxgi", "d3d11", "winuser", "dxgiformat", "dxgitype", "windef", "d3d9caps", "d3dcommon"]

[workspace]
members = ["tests"]
